tests/neg/i7013.scala
import quoted._

def foo() given QuoteContext = {
  class C
  '[C] // error
}
